<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landscape3"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/explanation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/explanation_text"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TableRow
        android:id="@+id/progress_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/week"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/week_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/week_number"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/workout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/workout"
            android:textColor="@color/black"
            android:textSize="28sp" />
        
        <TextView
            android:id="@+id/workout_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/workout_number"
            android:textColor="@color/black"
            android:textSize="28sp" />

    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/skip_to_wod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/silver_button_background"
            android:text="@string/skip_to_wod"
            android:textColor="@color/dark_blue" />
    </LinearLayout>

</LinearLayout>