<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/landscape3"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/registration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/lets_get_started"
            android:textColor="@color/white"
            android:textSize="28sp" >
        </TextView>

        <LinearLayout
            android:id="@+id/sexLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="12dp" >

            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="@color/green"
                android:textSize="21sp" >
            </TextView>

            <RadioGroup
                android:id="@+id/radioSexGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/male_radio_button"
                    android:textColor="@color/white"
                    android:textSize="21sp" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/female_radio_button"
                    android:textColor="@color/white"
                    android:textSize="21sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:focusableInTouchMode="true" >

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/green"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/editAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:descendantFocusability="beforeDescendants"
                android:focusable="true"
                android:hint="@string/edit_age"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fitnessLevelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="14dp" >

            <TextView
                android:id="@+id/fitness_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fitness_level"
                android:textColor="@color/green"
                android:textSize="21sp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/fitnessSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:background="@drawable/silver_button_background"
            android:entries="@array/fitness_level_spinner_array"
            android:minHeight="38dp"
            android:prompt="@string/fitness_level_prompt"
            android:text="@string/fitness_level_before_selection"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/quote"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <Button
            android:id="@+id/finalize_reg_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/green_shaded_button_background"
            android:text="@string/finalize_reg_info"
            android:textColor="@color/dark_blue"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/box_ready_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:text="@string/box_ready_name"
            android:textColor="@color/med_blue"
            android:textSize="61sp" />
        
        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/link"
            android:layout_marginTop="111sp"
            android:textColor="@color/white"
            android:textSize="21sp" />
    </LinearLayout>

</ScrollView>