<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landscape3"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/wod_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textSize="18sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/landscape3" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="352dp" />

        <Button
            android:id="@+id/delete_move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/silver_button_background"
            android:text="@string/delete_move"
            android:textColor="@color/dark_blue" />

        <TextView
            android:id="@+id/add_move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/add_move"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/finalize_wod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="21dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/silver_button_background"
            android:text="@string/finalize_wod"
            android:textColor="@color/green"
            android:visibility="gone" />

        <TextView
            android:id="@+id/wod_scoring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="78dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/rounded_textbox"
            android:padding="6dp"
            android:text="@string/wod_scoring"
            android:textColor="#000000"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/start_wod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/green_shaded_button_background"
            android:text="@string/start_wod"
            android:textColor="@color/dark_blue"
            android:visibility="gone" />

        <TextView
            android:id="@+id/timerValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="37dp"
            android:layout_marginTop="4dp"
            android:text="@string/timerVal"
            android:textColor="@color/black"
            android:textSize="82sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/green_shaded_button_background"
            android:text="@string/startButtonLabel"
            android:textColor="@color/dark_blue"
            android:visibility="gone" />

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/silver_button_background"
            android:text="@string/pauseButtonLabel"
            android:textColor="@color/dark_blue"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/screenshots"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/congrats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="84dp"
            android:background="@drawable/congrats"
            android:padding="6dip"
            android:textColor="@color/dark_blue"
            android:textSize="32sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/donefortoday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:background="@drawable/donefortoday"
            android:padding="6dp"
            android:textColor="@color/dark_blue"
            android:textSize="32sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/exit_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/silver_button_background"
            android:text="@string/exit_app"
            android:textColor="@color/dark_blue"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>