<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/silver_button_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:background="@drawable/congrats"
        android:padding="6dip"
        android:textColor="@color/dark_blue"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/donefortoday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/donefortoday"
        android:padding="6dp"
        android:textColor="@color/dark_blue"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/your_score_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/your_score_is"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/timerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/timerVal"
        android:textColor="@color/black"
        android:textSize="78sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp" >

        <Button
            android:id="@+id/facebook_button"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/green_shaded_button_background"
            android:text="Facebook"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />

        <Button
            android:id="@+id/twitter_button"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/green_shaded_button_background"
            android:text="Twitter"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/log_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/green_shaded_button_background"
            android:text="@string/log_workout"
            android:textColor="@color/dark_blue" />
    </LinearLayout>

</LinearLayout>